Added lection section

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -28,5 +28,5 @@ h3 {
 
 p {
   @include  font($defaultFont, $defaultSize, 
-  $defaultFontWieght, $defaultLineHeight);
+  $defaultFontWeight, $defaultLineHeight);
 }
