--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -1,20 +1,13 @@
 .section {
-  width: 100%;
-  // background-color: pink;
-  padding-left: $leftSmallMargin;
-  padding-right: $leftSmallMargin;
+
+  @extend %side-padding1;
 
   &--margin {
     margin-bottom: 40px;
   }
 
-  @media screen and (min-width: $breakpoint1) {
-    padding-left: $leftMediumMargin;
-    padding-right: $leftMediumMargin;
+  &__title {
+    margin-bottom: 30px;
   }
 
-  @media screen and (min-width: $breakpoint2) {
-    padding-left: $leftBigMargin;
-    padding-right: $leftBigMargin;
-  }
 }
