--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,29 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%side-padding1 {
+  width: calc(100% - 2 * #{$leftSmallMargin});
+
+  @media screen and (min-width: $breakpoint1) {
+    width: calc(100% - 2 * #{$leftMediumMargin});
+  }
+
+  @media screen and (min-width: $breakpoint2) {
+    width: calc(100% - 2 * #{$leftBigMargin});
+  }
+
+}
+
+%side-padding0 {
+  width: 100%;
+
+  @media screen and (min-width: $breakpoint1) {
+    width: calc(100% - 2 * #{$leftMediumMargin});
+  }
+
+  @media screen and (min-width: $breakpoint2) {
+    width: calc(100% - 2 * #{$leftBigMargin});
+  }
+
+}
