--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,10 +2,10 @@ $defaultFont: "IBM Plex Sans", sans-serif;
 $alternateFont: "Montserrat", sans-serif;
 
 $defaultSize: 16px;
-$defaultFontWieght: 300;
+$defaultFontWeight: 300;
 $defaultLineHeight: 24px;
 
-$breakpoint1: 769px;
+$breakpoint1: 767px;
 $breakpoint2: 1280px;
 
 $hoverDuration: 0.3s;
