header and five sections were created

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$Montserrat-font-family: "Montserrat", sans-serif;
+$IBM-font-family: "IBM Plex Sans", sans-serif;
+$Oswald-font-family: "Oswald", sans-serif;
+$Ubuntu-font-family: "Ubuntu", sans-serif;
+
+$max-width-for-viewport-more-than-1920px: calc(1920px - 350px);
+$max-logo-width: 68px;
+$horisontical-logo-position: calc(50% - #{$max-logo-width} / 2);
+
+$white: #fff;
+$very-dark: #0f0e08;
+
+$duration: 300ms;
