--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
 body {
-  background: $c-gray;
+  background: $white;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0 20px;
+
+  &__section {
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    width: $max-width-for-viewport-more-than-1920px;
+  }
 }
