--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "variables";
+@import "mixins";
+@import "scaffoldings";
+@import "blocks/header";
+@import "blocks/container";
+@import "blocks/page-main";
+@import "blocks/events";
+@import "blocks/event";
+@import "blocks/gallery";
+@import "blocks/subscription";
+@import "blocks/form";
+@import "blocks/footer";
