--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+
+html {
+  box-sizing: border-box;
+}
 
 body {
   background: $c-gray;
 }
+
+@import "header";
