Added subscribe section

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,5 +1,8 @@
-.gallery {
+// .gallery {
+//   max-width: 1570px;
+//   margin: 0 auto;
+//   @extend %bottomMargin;
 
-  height: 500px;
-  background-color: #eee;
-}
+//   height: 500px;
+//   background-color: #eee;
+// }
