--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -1,10 +1,10 @@
 .section {
+  max-width: 1570px;
+  margin: 0 auto;
 
-  @extend %side-padding1;
+  @extend %bottomMargin;
 
-  &--margin {
-    margin-bottom: 40px;
-  }
+  
 
   &__title {
     margin-bottom: 30px;
