--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,6 +12,8 @@ $hoverDuration: 0.3s;
 
 $greenColor: #1a5a4c;
 $grayColor: #687480;
+$whiteColor: #fff;
+$redColor: #f14a27;
 
 $smallArrowSize: 50px;
 $bigArrowSize: 70px;
