--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  @extend %side-padding0;
+
+  @extend %bottomMargin;
 
   &__image {
     width: 100%;
