--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -1,5 +1,66 @@
 .subscribe {
   width: 100%;
-  height: 250px;
-  background-color: lightcyan;
+  height: 400px;
+  background-image: url("../images/photos//background/2.png");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  color: $whiteColor;
+  &__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    width: calc(100% - 2 * #{$leftSmallMargin});
+    
+    @media screen and (min-width: $breakpoint1) {
+      gap: 30px;
+      max-width: 570px;
+    }
+    
+
+    margin-bottom: 46px;
+  }
+  
+
+  @extend %bottomMargin;
+  
+  &__details {
+    margin-bottom: 46px;
+  }
+
+  &__email {
+    box-sizing: border-box;
+    padding: 14px 35px;
+    @include font($defaultFont, 14px, 400);
+    color: $grayColor;
+    width: calc(100% - 50px);
+
+    @media screen and (min-width: $breakpoint1) {
+      padding: 24px 35px;
+      width: calc(100% - 100px);
+    }
+
+    &:focus {
+      outline: 1px solid $grayColor;
+    }
+  }
+  &__submit {
+    width: 50px;
+    height: 50px;
+    @include font($defaultFont, 18px, 700);
+    background-color: $redColor;
+    padding: 0;
+    border: none;
+
+    @media screen and (min-width: $breakpoint1) {
+      width: 70px;
+      height: 70px;
+    }
+  }
 }
