--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -3,28 +3,32 @@
   font-weight: 400;
 }
 
-%side-padding1 {
-  width: calc(100% - 2 * #{$leftSmallMargin});
+// %side-padding1 {
+//   width: calc(100% - 2 * #{$leftSmallMargin});
 
-  @media screen and (min-width: $breakpoint1) {
-    width: calc(100% - 2 * #{$leftMediumMargin});
-  }
+//   @media screen and (min-width: $breakpoint1) {
+//     width: calc(100% - 2 * #{$leftMediumMargin});
+//   }
 
-  @media screen and (min-width: $breakpoint2) {
-    width: calc(100% - 2 * #{$leftBigMargin});
-  }
+//   @media screen and (min-width: $breakpoint2) {
+//     width: calc(100% - 2 * #{$leftBigMargin});
+//   }
 
+// }
+
+%bottomMargin {
+  margin-bottom: 40px;
 }
 
-%side-padding0 {
-  width: 100%;
+// %side-padding0 {
+//   width: 100%;
 
-  @media screen and (min-width: $breakpoint1) {
-    width: calc(100% - 2 * #{$leftMediumMargin});
-  }
+//   @media screen and (min-width: $breakpoint1) {
+//     width: calc(100% - 2 * #{$leftMediumMargin});
+//   }
 
-  @media screen and (min-width: $breakpoint2) {
-    width: calc(100% - 2 * #{$leftBigMargin});
-  }
+//   @media screen and (min-width: $breakpoint2) {
+//     width: calc(100% - 2 * #{$leftBigMargin});
+//   }
 
-}
+// }
