footer was added

--- a/src/styles/classicism.scss
+++ b/src/styles/classicism.scss
@@ -1,22 +1,15 @@
 .classicism {
-  display: flex;
+  position: relative;
+  top: -102px;
   justify-content: center;
-  width: 100%;
-  height: 674px;
-  background: url("../images/Photo_3.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 
   &__info {
-    position: relative;
-    top: calc(674px - 102px);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     background-color: $white;
     width: 570px;
-    height: fit-content;
+    height: 204px;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   }
 
