--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,12 @@
 @import "classicism";
 @import "gallery";
 @import "subscription";
+@import "footer";
+
+body {
+  background: $white;
+}
+
+html {
+  font-family: $IBM-font-family;
+}
