--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,7 @@ $Oswald-font-family: "Oswald", sans-serif;
 $Ubuntu-font-family: "Ubuntu", sans-serif;
 
 $max-width-for-viewport-more-than-1920px: calc(1920px - 350px);
+$min-width-for-viewport: calc(320px - 40px);
 $max-logo-width: 68px;
 $horisontical-logo-position: calc(50% - #{$max-logo-width} / 2);
 
