--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,3 @@
-body {
-  background: $white;
-}
 
 .main {
   display: flex;
@@ -8,12 +5,28 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 0 20px;
 
   &__section {
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
-    width: $max-width-for-viewport-more-than-1920px;
+    max-width: $max-width-for-viewport-more-than-1920px;
+    width: calc(100% - 40px);
+  }
+
+  &__classicism-background {
+    width: 100%;
+    height: 674px;
+    background: url("../images/Photo_3.jpg") no-repeat center;
+    background-size: cover;
+  }
+
+  &__subscription-background {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 650px;
+    background: url("../images/Photo_4.jpg") no-repeat center;
+    background-size: cover;
   }
 }
