--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: baseline;
@@ -7,7 +8,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
-  width: $max-width-for-viewport-more-than-1920px;
+  max-width: $max-width-for-viewport-more-than-1920px;
+  width: calc(100% - 40px);
 
   &__toogler {
     display: none;
