without mobile menu and gallery

--- a/src/styles/block/article.scss
+++ b/src/styles/block/article.scss
@@ -9,6 +9,11 @@
     position: relative;
     width: max-content;
 
+    @media screen and(max-width: $beakpointTele) {
+      font-size: 28px;
+      line-height: 1em;
+    }
+
   }
 
   &__header--red {
