--- a/src/styles/block/container.scss
+++ b/src/styles/block/container.scss
@@ -3,4 +3,13 @@
   min-width: 300px;
   margin: 0 auto;
   padding: 0 25px;
+
+  @media screen and(max-width: $beakpointIPood) {
+    max-width: 1020px;
+  }
+
+  @media screen and(max-width: $beakpointTele) {
+    max-width: 740px;
+    min-width: 300px;
+  }
 }
