--- a/src/styles/block/event.scss
+++ b/src/styles/block/event.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
-  @media screen and(max-width: 920px) {
+  @media screen and(max-width: $beakpointIPood) {
     flex-direction: column;
   }
 
@@ -19,14 +19,18 @@
       border-radius: 8px;
     }
 
-    @media screen and(max-width: 920px) {
+    @media screen and(max-width: $beakpointIPood) {
       width: 100%;
+    }
+
+    @media screen and(max-width: $beakpointTele) {
+      height: 210px;
     }
   }
 
   &__discribe {
     margin: 40px 0 40px 130px;
-    @media screen and(max-width: 920px) {
+    @media screen and(max-width: $beakpointIPood) {
       width: 100%;
       margin: 40px 0;
     }
@@ -34,7 +38,7 @@
 
   &--left {
     flex-direction: row-reverse;
-    @media screen and(max-width: 920px) {
+    @media screen and(max-width:$beakpointIPood) {
       flex-direction: column;
     }
   }
