--- a/src/styles/block/exhibition.scss
+++ b/src/styles/block/exhibition.scss
@@ -22,5 +22,9 @@
   &--romantic {
     justify-content: space-between;
     font-weight: bold;
+
+    @media screen and(max-width: $beakpointTele) {
+      margin: 15px;
+    }
   }
 }
