--- a/src/styles/block/form.scss
+++ b/src/styles/block/form.scss
@@ -9,6 +9,11 @@
       text-transform: capitalize;
       padding-left: 40px;
     }
+
+    @media screen and(max-width: $beakpointTele) {
+      width: 235px;
+      height: 50px;
+    }
   }
 
   &__button {
@@ -20,5 +25,12 @@
     background-image: url("../images/VectorBlack.png");
     background-repeat: no-repeat;
     background-position: center;
+
+    @media screen and(max-width: $beakpointTele) {
+      width: 50px;
+      height: 50px;
+      margin-left: 0;
+      transform: translateX(-10%);
+    }
   }
 }
