--- a/src/styles/block/section-subscription.scss
+++ b/src/styles/block/section-subscription.scss
@@ -19,13 +19,21 @@
     color: $colorWhite;
     text-transform: capitalize;
     margin-bottom: 20px;
+
+    @media screen and(max-width: $beakpointTele) {
+      font-size: 36px;
+    }
   }
 
   &__text {
     color: $colorWhite;
     font-family: $IBMPlexSansFontFamili;
     font-size: 18px;
-    line-height: 18px;
+    line-height: 1.4em;
     margin-bottom: 86px;
+
+    @media screen and(max-width: $beakpointTele) {
+      max-width: 250px;
+    }
   }
 }
