--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,3 +13,11 @@
 @import "block/gallery";
 @import "block/section-subscription";
 @import "block/form";
+@import "block/footer";
+@import "block/general-info";
+@import "block/footer-nav";
+@import "block/header-nav";
+
+html {
+  scroll-behavior: smooth;
+}
