--- a/src/styles/block/section-romantism.scss
+++ b/src/styles/block/section-romantism.scss
@@ -20,5 +20,11 @@
     left: 0;
     padding: 45px 100px 30px;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @media screen and(max-width: $beakpointTele) {
+      width: 300px;
+      height: 154px;
+      padding: 10px 20px;
+    }
   }
 }
