--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,5 +1,7 @@
 .event {
   display: flex;
+  max-width: $maxWidth;
+  margin: 0 auto;
   flex-direction: column;
   justify-content: flex-end;
   margin-bottom: 60px;
