--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,8 +1,8 @@
-// .gallery {
-//   max-width: 1570px;
-//   margin: 0 auto;
-//   @extend %bottomMargin;
+.gallery {
+  max-width: $maxWidth;
+  margin: 0 auto;
+  @extend %bottomMargin;
 
-//   height: 500px;
-//   background-color: #eee;
-// }
+  height: 500px;
+  background-color: #eee;
+}
