--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,10 +2,14 @@ $defaultFont: "IBM Plex Sans", sans-serif;
 $alternateFont: "Montserrat", sans-serif;
 
 $defaultSize: 16px;
+$smallSize: 14px;
 $defaultFontWeight: 300;
+$smallFontWeight: 400;
 $defaultLineHeight: 24px;
+$smallLineHeight: 21px;
 
 $breakpoint1: 767px;
+$breakpoint1_2: 1000px;
 $breakpoint2: 1280px;
 
 $hoverDuration: 0.3s;
@@ -28,3 +32,5 @@ $logoTop: 15px;
 $leftSmallMargin: 18px;
 $leftMediumMargin: 37px;
 $leftBigMargin: 58px;
+
+$maxWidth: 1570px;
