--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  display: none;
+  display: flex;
   flex-direction: row;
   
   &__list {
@@ -13,18 +13,14 @@
     width: 100%;
     height: 54px;
     padding: 0 $leftSmallMargin;
-    color: white;
+    color: black;
     transition: background-color 0.5s, color 0.1s;
     
     &:hover {
       color: $grayColor;
       background-color: white;
     }
-    
-    &--small {
-      @include font(12px, 700, 16px, 2px);
-    }
-
+        
     @media screen and (min-width: $breakpoint1) {
       padding: 0 $leftMediumMargin;
     }
