--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -158,7 +158,7 @@
     flex-direction: column;
     align-items: center;
     @include font($defaultFont, 12px, 300, 17px); 
-    @extend %bottomMargin;
+    @extend %smallBottomMargin;
 
     @media screen and (min-width: $breakpoint1) {
       flex-direction: row;
