--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -1,10 +1,8 @@
 .section {
   max-width: $maxWidth;
-  margin: 0 auto;
 
+  @extend %widthWithMargins;
   @extend %bottomMargin;
-
-  
 
   &__title {
     margin-bottom: 30px;
