--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -4,9 +4,29 @@
 }
 
 %bottomMargin {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: $breakpoint1) {
+    margin-bottom: 90px;
+  }
+  
+  @media screen and (min-width: $breakpoint2) {
+    margin-bottom: 200px;
+  }
 }
 
 %smallBottomMargin {
   margin-bottom: 20px;
+}
+
+%widthWithMargins {
+  width: calc(100% - #{$leftSmallMargin} * 2);
+
+  @media screen and (min-width: $breakpoint1) {
+    width: calc(100% - #{$leftMediumMargin} * 2);
+  }
+  
+  @media screen and (min-width: $breakpoint2) {
+    width: calc(100% - #{$leftBigMargin} * 2);
+  }
 }
