--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -11,6 +11,7 @@ $smallLineHeight: 21px;
 $breakpoint1: 767px;
 $breakpoint1_2: 1000px;
 $breakpoint2: 1280px;
+$breakpoint3: 1920px;
 
 $hoverDuration: 0.3s;
 
