--- a/src/styles/block/burger-menu.scss
+++ b/src/styles/block/burger-menu.scss
@@ -45,6 +45,7 @@
     z-index: 110;
     position: absolute;
     left: 5px;
+    top: -10px;
   }
 }
 
@@ -54,12 +55,14 @@
 
 .burger-memu__line.burger-memu__line--active::before {
   transform: rotate(45deg);
+  background-color: $colorWhite;
   top: 0;
   transition: top 0.1s linear, transform 0.2s ease-out 0.1s;
 }
 
 .burger-memu__line.burger-memu__line--active::after {
   transform: rotate(-45deg);
+  background-color: $colorWhite;
   top: 0;
   transition: top 0.1s linear, transform 0.2s ease-out 0.1s;
 }
