--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -8,6 +8,11 @@
     @media screen and(min-width: 1440px) {
       grid-template-columns: 1fr 2fr 1fr;
     }
+
+    @media screen and(max-width: $beakpointTele) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__art--second-line {
@@ -16,6 +21,11 @@
     gap: 15px;
     @media screen and(min-width: 1440px) {
       grid-template-columns: 2fr 1fr 1fr;
+    }
+
+    @media screen and(max-width: $beakpointTele) {
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -29,6 +39,7 @@
       border: 1px solid $colorDarkGreen;
       border-radius: 8px;
     }
+
   }
 
   &__img-small {
@@ -40,6 +51,10 @@
 
     @media screen and(min-width: 1440px) {
       display: grid;
+    }
+
+    @media screen and(max-width: $beakpointTele) {
+      display: flex;
     }
   }
 }
