--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -10,9 +10,6 @@
 
   &__top {
     width: 35%;
-    @media screen and(max-width: $beakpointTele) {
-      height: 0;
-    }
   }
 
   @media screen and(max-width: $beakpointTele) {
@@ -34,6 +31,33 @@
       width: 100%;
       height: 400px;
     }
+  }
+
+  &__nav {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    height: 72px;
+    background-color: $colorDarkGreen;
+    transition: $durarion;
+
+    @media screen and(max-width: $beakpointIPood) {
+      width: 100%;
+      height: 70vh;
+    }
+
+    @media screen and(max-width: $beakpointTele) {
+      width: 100%;
+      height: 100vh;
+    }
+  }
+
+  &__nav--active {
+    display: flex;
+    justify-content: space-between;
   }
 
   &__title {
@@ -93,7 +117,7 @@
     }
 
     @media screen and(max-width: $beakpointTele) {
-      transform: translateX(-15%);
+      transform: translateX(-35%);
     }
   }
 
