--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,15 +1,12 @@
 .header {
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: 35% auto;
 
   @media screen and(max-width: $beakpointTele) {
     display: flex;
     flex-direction: column;
     position: static;
-  }
-
-  &__top {
-    width: 35%;
   }
 
   @media screen and(max-width: $beakpointTele) {
@@ -20,7 +17,6 @@
   &__backgraund {
     display: flex;
     align-items: center;
-    width: 75%;
     background-image: url("../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv.png");
     background-size: cover;
     background-position: center;
