Finished creating landing

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -43,3 +43,11 @@
     margin-bottom: 60px;
   }
 }
+
+@mixin infoText {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0;
+  color: $darkColor;
+}
