--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -58,6 +58,12 @@
   &__img {
     width: 100%;
     object-fit: cover;
+    transition: box-shadow $duration, outline $duration;
+
+    &:hover {
+      box-shadow: 2px 2px 5px 3px rgba($blackColor, 0.5);
+      outline: 2px solid $greenColor;
+    }
   }
 
   &__info {
@@ -145,6 +151,11 @@
     letter-spacing: 0;
     color: $darkColor;
     position: relative;
+    transition: text-shadow $duration;
+
+    &:hover {
+      text-shadow: 2px 2px 3px $greenColor;
+    }
 
     @include onTablet {
       font-size: 36px;
