--- a/src/styles/blocks/page-main.scss
+++ b/src/styles/blocks/page-main.scss
@@ -22,4 +22,19 @@
       margin-bottom: 200px;
     }
   }
+
+  &__promo {
+    margin-bottom: 70px;
+    margin-top: -70px;
+
+    @include onTablet {
+      margin-top: -87px;
+      margin-bottom: 90px;
+      /*  margin-top: -249px; */
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
 }
