--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,10 @@
 @import "blocks/subscription";
 @import "blocks/form";
 @import "blocks/footer";
+@import "blocks/logo";
+@import "blocks/socials";
+@import "blocks/info";
+@import "blocks/copyright";
+@import "blocks/nav";
+@import "blocks/main-title";
+@import "blocks/promo";
