--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -2,10 +2,10 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
+  justify-content: space-between;
 
   @include onTablet {
     width: 475px;
-    justify-content: space-between;
   }
 
   @include onDesktop {
@@ -23,20 +23,19 @@
     height: 50px;
     padding: 18px 30px;
     flex-grow: 1;
-    width: 395px;
+    max-width: 380px;
 
     &::placeholder {
       color: $greyColor;
     }
 
     @include onTablet {
-      flex-grow: 0;
-      width: 395px;
+      max-width: 395px;
       height: 70px;
     }
 
     @include onDesktop {
-      width: 470px;
+      max-width: 470px;
     }
   }
 
