--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -21,6 +21,12 @@
 
   &__img {
     width: 100%;
+    transition: box-shadow $duration, outline $duration;
+
+    &:hover {
+      box-shadow: 2px 2px 5px 3px rgba($blackColor, 0.5);
+      outline: 2px solid $greenColor;
+    }
 
     &:nth-of-type(2),
     &:nth-of-type(4) {
