--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,3 +1,5 @@
+$columnWidth: 160px;
+
 .footer {
   max-width: $maxWidth;
   width: calc(100% - 2 * #{$leftSmallMargin});
@@ -62,7 +64,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 10px;
 
     @media screen and (min-width: $breakpoint1_2) {
       flex-direction: row;
@@ -73,17 +75,17 @@
 
   &__schedule {
     display: grid;
-    grid-template-columns: 130px auto;
-    gap: 30px;
+    grid-template-columns: $columnWidth auto;
+    gap: 10px;
 
     @media screen and (min-width: $breakpoint1) {
       gap: 80px;
-      grid-template-columns: 130px 160px auto;
+      grid-template-columns: $columnWidth 160px auto;
     }
   }
 
   &__schedule-left {
-    width: 130px;
+    width: $columnWidth;
   }
   
   &__line {
@@ -113,21 +115,21 @@
 
   &__menu {
     display: grid;
-    grid-template-columns: 130px auto;
-    gap: 30px;
+    grid-template-columns: $columnWidth auto;
+    gap: 10px;
 
     @media screen and (min-width: $breakpoint1) {
       gap: 80px;
-      grid-template-columns: 57px 130px auto;
+      grid-template-columns: 57px $columnWidth auto;
     }
 
     @media screen and (min-width: $breakpoint1_2) {
-      grid-template-columns: 130px auto;
+      grid-template-columns: $columnWidth auto;
     }
   }
 
   &__menu-left {
-    width: 130px;
+    width: $columnWidth;
   }
 
   &__nav-item {
