Fixed some bugs

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,21 +1,21 @@
 .container {
   margin: 0 auto;
-  padding: 0 20px;
-  min-width: 320px;
+  width: calc(100% - 40px);
+  min-width: 280px;
 
   @include onMobile {
-    max-width: 500px;
+    max-width: 460px;
   }
 
   @include onTablet {
-    max-width: 740px;
+    max-width: 700px;
   }
 
   @include onDesktop {
-    max-width: 1210px;
+    max-width: 1170px;
   }
 
   @include onDesktopLarge {
-    max-width: 1610px;
+    max-width: 1570px;
   }
 }
