Added event handler on menu links, hover effect for button link for phone and email

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -48,6 +48,11 @@
     position: relative;
     background: $redColor url("../images/arrow.svg") no-repeat center;
     background-size: 15px 15px;
+    transition: background-color $duration;
+
+    &:hover {
+      background-color: $greenColor;
+    }
 
     @include onTablet {
       width: 70px;
