--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -84,6 +84,10 @@
   &__link {
     color: $darkColor;
     transition: text-shadow $duration;
+
+    &:hover {
+      text-shadow: 2px 2px 3px $greenColor;
+    }
   }
 
   &__list {
@@ -108,11 +112,5 @@
     &:last-of-type {
       min-width: 75px;
     }
-  }
-}
-
-.info__item:hover {
-  .info__link {
-    text-shadow: 2px 2px 3px $greenColor;
   }
 }
